--- a/TheFactory/ClientApp/src/index.html
+++ b/TheFactory/ClientApp/src/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MC1Z8536D8"></script>
+    <script>window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MC1Z8536D8');</script>
     <meta charset="utf-8" />
     <title>TheFactory</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+</head>
   <body>
     <app-root>Loading...</app-root>
   </body>
