--- a/TheFactory/ClientApp/src/index.html
+++ b/TheFactory/ClientApp/src/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MC1Z8536D8"></script>
+<head>-->
+<!-- Google tag (gtag.js) -->
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-MC1Z8536D8"></script>
     <script>window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -18,5 +18,143 @@
   <body>
     <app-root>Loading...</app-root>
   </body>
-</html>
+</html>-->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HambaOnline - Book Buses Across Southern Africa</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f7f9fc;
+            color: #333;
+        }
+
+        header {
+            background-color: #004aad;
+            color: white;
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+            header h1 {
+                margin: 0;
+                font-size: 2.5rem;
+            }
+
+            header p {
+                font-size: 1.2rem;
+                margin-top: 10px;
+            }
+
+        .search-section {
+            background-color: white;
+            max-width: 800px;
+            margin: -40px auto 40px auto;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+        }
+
+            .search-section h2 {
+                margin-bottom: 20px;
+                color: #004aad;
+            }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        input, select, button {
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            font-size: 1rem;
+        }
+
+        button {
+            background-color: #004aad;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.2s ease;
+        }
+
+            button:hover {
+                background-color: #003388;
+            }
+
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .feature {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            flex: 1 1 250px;
+            max-width: 300px;
+            text-align: center;
+        }
+
+            .feature h3 {
+                margin-bottom: 10px;
+                color: #004aad;
+            }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #004aad;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>HambaOnline</h1>
+        <p>Book buses quickly and easily across Southern Africa</p>
+    </header>
+
+    <section class="search-section">
+        <h2>Find Your Bus</h2>
+        <form>
+            <input type="text" placeholder="From (e.g. Bulawayo)" required />
+            <input type="text" placeholder="To (e.g. Johannesburg)" required />
+            <input type="date" required />
+            <button type="submit">Search Buses</button>
+        </form>
+    </section>
+
+    <section class="features">
+        <div class="feature">
+            <h3>Compare Routes</h3>
+            <p>Easily compare multiple routes and fares to choose the best option.</p>
+        </div>
+        <div class="feature">
+            <h3>Trusted Operators</h3>
+            <p>We work only with vetted, reliable bus companies.</p>
+        </div>
+        <div class="feature">
+            <h3>Instant Booking</h3>
+            <p>Reserve and pay for your seat in just a few clicks.</p>
+        </div>
+    </section>
+
+    <footer>
+        &copy; 2025 HambaOnline. All rights reserved.
+    </footer>
+
+</body>
+</html>
