--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -1,155 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HambaOnline | Book Bus Tickets Online</title>
-  <meta name="description" content="Book and manage bus tickets online across South Africa with HambaOnline. Fast, secure, and convenient travel." />
-  <meta name="keywords" content="bus tickets, HambaOnline, online booking, South Africa travel, cheap bus fare" />
-  <meta name="author" content="HambaOnline Team" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HambaOnline - Book Buses Across Southern Africa</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f7f9fc;
+            color: #333;
+        }
 
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f0f4f8;
-      color: #1e2a38;
-      line-height: 1.6;
-    }
+        header {
+            background-color: #004aad;
+            color: white;
+            padding: 40px 20px;
+            text-align: center;
+        }
 
-    header {
-      background-color: #0077cc;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
+            header h1 {
+                margin: 0;
+                font-size: 2.5rem;
+            }
 
-    header h1 {
-      font-size: 2.5rem;
-    }
+            header p {
+                font-size: 1.2rem;
+                margin-top: 10px;
+            }
 
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.1rem;
-    }
+        .search-section {
+            background-color: white;
+            max-width: 800px;
+            margin: -40px auto 40px auto;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+        }
 
-    .hero {
-      padding: 3rem 1rem;
-      text-align: center;
-      background-color: #e6f2ff;
-    }
+            .search-section h2 {
+                margin-bottom: 20px;
+                color: #004aad;
+            }
 
-    .hero h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #004080;
-    }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
 
-    .hero p {
-      font-size: 1.1rem;
-      color: #333;
-      max-width: 600px;
-      margin: 0 auto;
-    }
+        input, select, button {
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            font-size: 1rem;
+        }
 
-    .cta-button {
-      margin-top: 2rem;
-      padding: 1rem 2rem;
-      background-color: #0077cc;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
+        button {
+            background-color: #004aad;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.2s ease;
+        }
 
-    .cta-button:hover {
-      background-color: #005fa3;
-    }
+            button:hover {
+                background-color: #003388;
+            }
 
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      padding: 3rem 2rem;
-      background-color: #fff;
-    }
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            padding: 20px;
+        }
 
-    .feature {
-      background: #f9fbfd;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      text-align: center;
-    }
+        .feature {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            flex: 1 1 250px;
+            max-width: 300px;
+            text-align: center;
+        }
 
-    .feature h3 {
-      color: #005fa3;
-      margin-bottom: 0.5rem;
-    }
+            .feature h3 {
+                margin-bottom: 10px;
+                color: #004aad;
+            }
 
-    .feature p {
-      color: #444;
-      font-size: 0.95rem;
-    }
-
-    footer {
-      background-color: #002244;
-      color: #ccc;
-      text-align: center;
-      padding: 1.5rem;
-      font-size: 0.9rem;
-    }
-
-    footer a {
-      color: #66bfff;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-  </style>
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #004aad;
+            color: white;
+        }
+    </style>
 </head>
 <body>
 
-  <header>
-    <h1>HambaOnline</h1>
-    <p>Connecting South Africa, one ticket at a time.</p>
-  </header>
+    <header>
+        <h1>HambaOnline</h1>
+        <p>Book buses quickly and easily across Southern Africa</p>
+    </header>
 
-  <section class="hero">
-    <h2>Book Your Bus Tickets Online</h2>
-    <p>HambaOnline helps you search routes, compare fares, and book safe and affordable bus tickets across South Africa.</p>
-    <button class="cta-button" onclick="location.href='/search'">Find Your Route</button>
-  </section>
+    <section class="search-section">
+        <h2>Find Your Bus</h2>
+        <form>
+            <input type="text" placeholder="From (e.g. Capetown)" required />
+            <input type="text" placeholder="To (e.g. Johannesburg)" required />
+            <input type="date" required />
+            <button type="submit">Search Buses</button>
+        </form>
+    </section>
 
-  <section class="features">
-    <div class="feature">
-      <h3>Easy Search</h3>
-      <p>Find routes and operators by location, date, or price instantly.</p>
-    </div>
-    <div class="feature">
-      <h3>Instant Booking</h3>
-      <p>Real-time seat availability and instant e-ticket delivery.</p>
-    </div>
-    <div class="feature">
-      <h3>Secure Checkout</h3>
-      <p>Pay safely with cards, bank transfers, or mobile money.</p>
-    </div>
-  </section>
+    <section class="features">
+        <div class="feature">
+            <h3>Compare Routes</h3>
+            <p>Easily compare multiple routes and fares to choose the best option.</p>
+        </div>
+        <div class="feature">
+            <h3>Trusted Operators</h3>
+            <p>We work only with vetted, reliable bus companies.</p>
+        </div>
+        <div class="feature">
+            <h3>Instant Booking</h3>
+            <p>Reserve and pay for your seat in just a few clicks.</p>
+        </div>
+    </section>
 
-  <footer>
-    &copy; 2025 HambaOnline. All rights reserved. | 
-    <a href="/privacy">Privacy Policy</a> | 
-    <a href="/terms">Terms of Service</a>
-  </footer>
+    <footer>
+        &copy; 2025 HambaOnline. All rights reserved.
+    </footer>
 
 </body>
 </html>
