--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HambaOnline - Book Buses Across Southern Africa</title>
@@ -96,13 +97,57 @@
             background-color: #004aad;
             color: white;
         }
+
+
+
+
+.digital-sign-container {
+  width: 100%;
+  overflow: hidden;
+  background-color: #111; /* Dark screen */
+  padding: 0.75rem 0;
+  margin-top: 0.5rem;
+  border-top: 2px solid #333;
+  border-bottom: 2px solid #333;
+}
+
+.digital-sign-text {
+  display: inline-block;
+  white-space: nowrap;
+  color: #00FF00; /* Neon green */
+  font-size: 1.4rem;
+  font-family: 'VT323', monospace;
+  padding-left: 100%;
+  animation: scrollDigital 10s linear infinite;
+  text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
+}
+
+@keyframes scrollDigital {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
     </style>
+
+
 </head>
 <body>
+<div class="digital-sign-container">
+  <div class="digital-sign-text">
+    🚌 LEAVING 19:00 - SWISS to BYO !
+  </div>
+</div>
 
     <header>
-        <h1>HambaOnline</h1>
+        <h1>hambaonline</h1>
         <p>Book buses quickly and easily across Southern Africa</p>
+
+
+
     </header>
 
     <section class="search-section">
