Leaving soon - dashboard 2

--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -138,7 +138,7 @@
 <body>
 <div class="digital-sign-container">
   <div class="digital-sign-text">
-    🚌 LEAVING 19:00 - SWISS to BYO !
+    LEAVING(JHB)! 🚌 SWISS(BYO)-19:00  🚌 MZANSI(BYO)-20:00 🚌 INTERCAPE(BYO)-21:00 
   </div>
 </div>
 
