--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -1,183 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HambaOnline - Book Buses Across Southern Africa</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f7f9fc;
-            color: #333;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HambaOnline - Book Buses Across Southern Africa</title>
+  <meta name="description" content="Book intercity and cross-border buses across Southern Africa with HambaOnline. Trusted operators, instant booking, and route comparisons." />
+  <link rel="canonical" href="https://hambaonline.com/" />
 
-        header {
-            background-color: #004aad;
-            color: white;
-            padding: 40px 20px;
-            text-align: center;
-        }
+  <!-- Open Graph for Social Sharing -->
+  <meta property="og:title" content="HambaOnline - Book Buses Across Southern Africa" />
+  <meta property="og:description" content="Trusted operators, route comparisons, and instant booking across Southern Africa." />
+  <meta property="og:url" content="https://hambaonline.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://hambaonline.com/images/og-preview.jpg" />
 
-            header h1 {
-                margin: 0;
-                font-size: 2.5rem;
-            }
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="HambaOnline - Book Buses Across Southern Africa" />
+  <meta name="twitter:description" content="Trusted operators, route comparisons, and instant booking across Southern Africa." />
+  <meta name="twitter:image" content="https://hambaonline.com/images/og-preview.jpg" />
 
-            header p {
-                font-size: 1.2rem;
-                margin-top: 10px;
-            }
-
-        .search-section {
-            background-color: white;
-            max-width: 800px;
-            margin: -40px auto 40px auto;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-        }
-
-            .search-section h2 {
-                margin-bottom: 20px;
-                color: #004aad;
-            }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        input, select, button {
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            font-size: 1rem;
-        }
-
-        button {
-            background-color: #004aad;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.2s ease;
-        }
-
-            button:hover {
-                background-color: #003388;
-            }
-
-        .features {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-            padding: 20px;
-        }
-
-        .feature {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            flex: 1 1 250px;
-            max-width: 300px;
-            text-align: center;
-        }
-
-            .feature h3 {
-                margin-bottom: 10px;
-                color: #004aad;
-            }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #004aad;
-            color: white;
-        }
-
-
-
-
-.digital-sign-container {
-  width: 100%;
-  overflow: hidden;
-  background-color: #111; /* Dark screen */
-  padding: 0.75rem 0;
-  margin-top: 0.5rem;
-  border-top: 2px solid #333;
-  border-bottom: 2px solid #333;
-}
-
-.digital-sign-text {
-  display: inline-block;
-  white-space: nowrap;
-  color: #00FF00; /* Neon green */
-  font-size: 1.4rem;
-  font-family: 'VT323', monospace;
-  padding-left: 100%;
-  animation: scrollDigital 10s linear infinite;
-  text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
-}
-
-@keyframes scrollDigital {
-  0% {
-    transform: translateX(0%);
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TravelAgency",
+    "name": "HambaOnline",
+    "url": "https://hambaonline.com",
+    "description": "Book buses across Southern Africa. Compare routes, trusted operators, and instant bookings.",
+    "areaServed": {
+      "@type": "Place",
+      "name": ["South Africa", "Zimbabwe", "Mozambique", "Botswana", "Zambia"]
+    },
+    "sameAs": [
+      "https://www.facebook.com/hambaonline",
+      "https://www.instagram.com/hambaonline"
+    ]
   }
-  100% {
-    transform: translateX(-100%);
-  }
-}
+  </script>
 
-    </style>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f7f9fc;
+      color: #333;
+    }
 
+    header {
+      background-color: #004aad;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
 
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+    }
+
+    .search-section {
+      background-color: white;
+      max-width: 800px;
+      margin: -40px auto 40px auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+
+    .search-section h2 {
+      margin-bottom: 20px;
+      color: #004aad;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    input, select, button {
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    button {
+      background-color: #004aad;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #003388;
+    }
+
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .feature {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      flex: 1 1 250px;
+      max-width: 300px;
+      text-align: center;
+    }
+
+    .feature h3 {
+      margin-bottom: 10px;
+      color: #004aad;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #004aad;
+      color: white;
+    }
+
+    .digital-sign-container {
+      width: 100%;
+      overflow: hidden;
+      background-color: #111;
+      padding: 0.75rem 0;
+      margin-top: 0.5rem;
+      border-top: 2px solid #333;
+      border-bottom: 2px solid #333;
+    }
+
+    .digital-sign-text {
+      display: inline-block;
+      white-space: nowrap;
+      color: #00FF00;
+      font-size: 1.4rem;
+      font-family: 'VT323', monospace;
+      padding-left: 100%;
+      animation: scrollDigital 10s linear infinite;
+      text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
+    }
+
+    @keyframes scrollDigital {
+      0% { transform: translateX(0%); }
+      100% { transform: translateX(-100%); }
+    }
+  </style>
 </head>
 <body>
-<div class="digital-sign-container">
-  <div class="digital-sign-text">
-    LEAVING(JHB)! 🚌 SWISS(BYO)-19:00  🚌 MZANSI(BYO)-20:00 🚌 INTERCAPE(BYO)-21:00 
+
+  <div class="digital-sign-container">
+    <div class="digital-sign-text">
+      LEAVING(JHB)! 🚌 SWISS(BYO)-19:00  🚌 MZANSI(BYO)-20:00 🚌 INTERCAPE(BYO)-21:00 
+    </div>
   </div>
-</div>
 
-    <header>
-        <h1>hambaonline</h1>
-        <p>Book buses quickly and easily across Southern Africa</p>
+  <header>
+    <h1>HambaOnline</h1>
+    <p>Book buses quickly and easily across Southern Africa</p>
+  </header>
 
+  <section class="search-section">
+    <h2>Find Your Bus</h2>
+    <form>
+      <input type="text" placeholder="From (e.g. Capetown)" required />
+      <input type="text" placeholder="To (e.g. Johannesburg)" required />
+      <input type="date" required />
+      <button type="submit">Search Buses</button>
+    </form>
+  </section>
 
+  <section class="features">
+    <div class="feature">
+      <h3>Compare Routes</h3>
+      <p>Easily compare multiple routes and fares to choose the best option.</p>
+    </div>
+    <div class="feature">
+      <h3>Trusted Operators</h3>
+      <p>We work only with vetted, reliable bus companies.</p>
+    </div>
+    <div class="feature">
+      <h3>Instant Booking</h3>
+      <p>Reserve and pay for your seat in just a few clicks.</p>
+    </div>
+  </section>
 
-    </header>
-
-    <section class="search-section">
-        <h2>Find Your Bus</h2>
-        <form>
-            <input type="text" placeholder="From (e.g. Capetown)" required />
-            <input type="text" placeholder="To (e.g. Johannesburg)" required />
-            <input type="date" required />
-            <button type="submit">Search Buses</button>
-        </form>
-    </section>
-
-    <section class="features">
-        <div class="feature">
-            <h3>Compare Routes</h3>
-            <p>Easily compare multiple routes and fares to choose the best option.</p>
-        </div>
-        <div class="feature">
-            <h3>Trusted Operators</h3>
-            <p>We work only with vetted, reliable bus companies.</p>
-        </div>
-        <div class="feature">
-            <h3>Instant Booking</h3>
-            <p>Reserve and pay for your seat in just a few clicks.</p>
-        </div>
-    </section>
-
-    <footer>
-        &copy; 2025 HambaOnline. All rights reserved.
-    </footer>
+  <footer>
+    &copy; 2025 HambaOnline. All rights reserved.
+  </footer>
 
 </body>
 </html>
