--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -6,50 +6,27 @@
   <title>HambaOnline - Book Buses Across Southern Africa</title>
   <meta name="description" content="Book intercity and cross-border buses across Southern Africa with HambaOnline. Trusted operators, instant booking, and route comparisons." />
   <link rel="canonical" href="https://hambaonline.com/" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" media="all">
 
-  <!-- Open Graph for Social Sharing -->
-  <meta property="og:title" content="HambaOnline - Book Buses Across Southern Africa" />
-  <meta property="og:description" content="Trusted operators, route comparisons, and instant booking across Southern Africa." />
-  <meta property="og:url" content="https://hambaonline.com/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://hambaonline.com/images/og-preview.jpg" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="HambaOnline - Book Buses Across Southern Africa" />
-  <meta name="twitter:description" content="Trusted operators, route comparisons, and instant booking across Southern Africa." />
-  <meta name="twitter:image" content="https://hambaonline.com/images/og-preview.jpg" />
-
-  <!-- Schema.org Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "TravelAgency",
-    "name": "HambaOnline",
-    "url": "https://hambaonline.com",
-    "description": "Book buses across Southern Africa. Compare routes, trusted operators, and instant bookings.",
-    "areaServed": {
-      "@type": "Place",
-      "name": ["South Africa", "Zimbabwe", "Mozambique", "Botswana", "Zambia"]
-    },
-    "sameAs": [
-      "https://www.facebook.com/hambaonline",
-      "https://www.instagram.com/hambaonline"
-    ]
-  }
-  </script>
-
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
   <style>
+    :root {
+      --primary-color: #004aad;
+      --text-color: #333;
+      --bg-color: #f7f9fc;
+      --neon-green: #00FF00;
+    }
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f7f9fc;
-      color: #333;
+      background-color: var(--bg-color);
+      color: var(--text-color);
     }
 
-    header {
-      background-color: #004aad;
+    header[role="banner"] {
+      background-color: var(--primary-color);
       color: white;
       padding: 40px 20px;
       text-align: center;
@@ -65,18 +42,18 @@
       margin-top: 10px;
     }
 
-    .search-section {
-      background-color: white;
+    main[role="main"] {
       max-width: 800px;
       margin: -40px auto 40px auto;
       padding: 30px;
+      background-color: white;
       border-radius: 10px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
 
-    .search-section h2 {
+    main h2 {
       margin-bottom: 20px;
-      color: #004aad;
+      color: var(--primary-color);
     }
 
     form {
@@ -85,7 +62,12 @@
       gap: 15px;
     }
 
-    input, select, button {
+    label {
+      font-weight: bold;
+      margin-bottom: -10px;
+    }
+
+    input, button {
       padding: 12px;
       border: 1px solid #ccc;
       border-radius: 6px;
@@ -93,7 +75,7 @@
     }
 
     button {
-      background-color: #004aad;
+      background-color: var(--primary-color);
       color: white;
       cursor: pointer;
       transition: background-color 0.2s ease;
@@ -123,13 +105,13 @@
 
     .feature h3 {
       margin-bottom: 10px;
-      color: #004aad;
+      color: var(--primary-color);
     }
 
-    footer {
+    footer[role="contentinfo"] {
       text-align: center;
       padding: 20px;
-      background-color: #004aad;
+      background-color: var(--primary-color);
       color: white;
     }
 
@@ -146,7 +128,7 @@
     .digital-sign-text {
       display: inline-block;
       white-space: nowrap;
-      color: #00FF00;
+      color: var(--neon-green);
       font-size: 1.4rem;
       font-family: 'VT323', monospace;
       padding-left: 100%;
@@ -162,28 +144,34 @@
 </head>
 <body>
 
-  <div class="digital-sign-container">
+  <div class="digital-sign-container" aria-label="Live departures">
     <div class="digital-sign-text">
-      LEAVING(JHB)! 🚌 SWISS(BYO)-19:00  🚌 MZANSI(BYO)-20:00 🚌 INTERCAPE(BYO)-21:00 
+      LEAVING(JHB)! 🚌 SWISS(BYO)-19:00 🚌 MZANSI(BYO)-20:00 🚌 INTERCAPE(BYO)-21:00 
     </div>
   </div>
 
-  <header>
+  <header role="banner">
     <h1>HambaOnline</h1>
     <p>Book buses quickly and easily across Southern Africa</p>
   </header>
 
-  <section class="search-section">
+  <main role="main">
     <h2>Find Your Bus</h2>
     <form>
-      <input type="text" placeholder="From (e.g. Capetown)" required />
-      <input type="text" placeholder="To (e.g. Johannesburg)" required />
-      <input type="date" required />
+      <label for="from">From</label>
+      <input type="text" id="from" name="from" placeholder="e.g. Capetown" required>
+
+      <label for="to">To</label>
+      <input type="text" id="to" name="to" placeholder="e.g. Johannesburg" required>
+
+      <label for="date">Date of Travel</label>
+      <input type="date" id="date" name="date" required>
+
       <button type="submit">Search Buses</button>
     </form>
-  </section>
+  </main>
 
-  <section class="features">
+  <section class="features" aria-label="Site features">
     <div class="feature">
       <h3>Compare Routes</h3>
       <p>Easily compare multiple routes and fares to choose the best option.</p>
@@ -198,7 +186,7 @@
     </div>
   </section>
 
-  <footer>
+  <footer role="contentinfo">
     &copy; 2025 HambaOnline. All rights reserved.
   </footer>
 
