Power House  station - real time table

--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -227,11 +227,22 @@
 
     <script>
         const messages = [
+            "🚌 REVIVAL LEAVING 08:00",
+            "🚌 REVIVAL LEAVING 12:00",
+            "🚌 BRAVO LEAVING 11:00",
             "🚌 SWISS(BYO) LEAVING 19:00",
-            "🚌 MZANSI(BYO) BOARDING NOW",
-            "🚌 INTERCAPE(LUSAKA) DELAYED by 20 mins",
-            "🚌 EAGLE LINER(BYO) ON TIME 20:00 ✅",
-            "🚌 SWISS(LUSAKA) DEPARTS 21:00"
+            "🚌 MZANSI(BYO) 14:00",
+            "🚌 MZANSI(BYO) 17:00",
+            "🚌 DELTA(BYO) 15:00",
+            "🚌 DELTA(BYO) 16:00",
+            "🚌 SWISS(BYO) 15:00",
+            "🚌 SWISS(BYO) 16:00",
+            "🚌 SWISS(BYO) 17:00",
+            "🚌 IMPERIAL 17:00",
+            "🚌 IMPERIAL 18:00",
+            "🚌 BROOKLYN 17:00",
+            "🚌 REGIONAL 17:00",
+            "🚌 MTHETHI 18:00",
         ];
 
         const textElement = document.getElementById('digitalText');
