Bug fix - previous check-in

--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -227,9 +227,9 @@
 
     <script>
         const messages = [
-            "🚌 REVIVAL LEAVING 08:00",
-            "🚌 REVIVAL LEAVING 12:00",
-            "🚌 BRAVO LEAVING 11:00",
+            "🚌 REVIVAL(BYO) LEAVING 08:00",
+            "🚌 REVIVAL(BYO) LEAVING 12:00",
+            "🚌 BRAVO(BYO) LEAVING 11:00",
             "🚌 SWISS(BYO) LEAVING 19:00",
             "🚌 MZANSI(BYO) 14:00",
             "🚌 MZANSI(BYO) 17:00",
@@ -238,11 +238,11 @@
             "🚌 SWISS(BYO) 15:00",
             "🚌 SWISS(BYO) 16:00",
             "🚌 SWISS(BYO) 17:00",
-            "🚌 IMPERIAL 17:00",
-            "🚌 IMPERIAL 18:00",
-            "🚌 BROOKLYN 17:00",
-            "🚌 REGIONAL 17:00",
-            "🚌 MTHETHI 18:00",
+            "🚌 IMPERIAL(BYO) 17:00",
+            "🚌 IMPERIAL(BYO) 18:00",
+            "🚌 BROOKLYN(BYO) 17:00",
+            "🚌 REGIONAL(BYO) 17:00",
+            "🚌 MTHETHI(BYO) 18:00",
         ];
 
         const textElement = document.getElementById('digitalText');
