--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -74,7 +74,7 @@
             color: #00FF00;
             font-size: 1.4rem;
             font-family: 'VT323', monospace;
-            padding-left: 30px;
+            padding-left: 100%;
             animation: scrollDigital 10s linear infinite;
             text-shadow: 0 0 5px #0f0, 0 0 10px #0f0, 0 0 20px #0f0;
         }
