Group by morning and afternoon buses

--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -227,9 +227,7 @@
 
     <script>
         const messages = [
-            "🚌 REVIVAL(BYO) LEAVING 08:00",
-            "🚌 REVIVAL(BYO) LEAVING 12:00",
-            "🚌 BRAVO(BYO) LEAVING 11:00",
+            "🚌 POWER HOUSE - MORNING BUSES          🚌REVIVAL(POWER HOUSE to BYO) LEAVING 08:00.          🚌BRAVO(BYO) LEAVING 11:00.         🚌 REVIVAL(BYO) LEAVING 12:00",
             "🚌 SWISS(BYO) LEAVING 19:00",
             "🚌 MZANSI(BYO) 14:00",
             "🚌 MZANSI(BYO) 17:00",
