--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>]
+<head>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3ZBP2V5NZ"></script>
 <script>
@@ -227,7 +227,7 @@
 
     <script>
         const messages = [
-            "🚌 POWER HOUSE - MORNING BUSES          🚌REVIVAL(POWER HOUSE to BYO) LEAVING 08:00.          🚌BRAVO(BYO) LEAVING 11:00.         🚌 REVIVAL(BYO) LEAVING 12:00",
+            "🚌 POWER HOUSE - EKUSENI          🚌REVIVAL(POWER HOUSE to BYO) LEAVING 08:00.          🚌BRAVO(BYO) LEAVING 11:00.         🚌 REVIVAL(BYO) LEAVING 12:00",
             "🚌 SWISS(BYO) LEAVING 19:00",
             "🚌 MZANSI(BYO) 14:00",
             "🚌 MZANSI(BYO) 17:00",
