--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -183,7 +183,7 @@
 <body>
     <div class="digital-sign-container" id="digitalBanner">
         <div class="digital-sign-text" id="digitalText">
-            🚌 SWISS(HRE) LEAVING 19:00"<span class="cursor">_</span>
+            🚌 POWER HOUSE - BUS STATION"<span class="cursor">_</span>
         </div>
     </div>
     <header>
@@ -228,19 +228,19 @@
     <script>
         const messages = [
             "🚌 POWER HOUSE - EKUSENI          🚌REVIVAL(POWER HOUSE to BYO) LEAVING 08:00.          🚌BRAVO(BYO) LEAVING 11:00.         🚌 REVIVAL(BYO) LEAVING 12:00",
-            "🚌 SWISS(BYO) LEAVING 19:00",
-            "🚌 MZANSI(BYO) 14:00",
-            "🚌 MZANSI(BYO) 17:00",
-            "🚌 DELTA(BYO) 15:00",
-            "🚌 DELTA(BYO) 16:00",
-            "🚌 SWISS(BYO) 15:00",
-            "🚌 SWISS(BYO) 16:00",
-            "🚌 SWISS(BYO) 17:00",
-            "🚌 IMPERIAL(BYO) 17:00",
-            "🚌 IMPERIAL(BYO) 18:00",
-            "🚌 BROOKLYN(BYO) 17:00",
-            "🚌 REGIONAL(BYO) 17:00",
-            "🚌 MTHETHI(BYO) 18:00",
+            "🚌 SWISS(BYO) LEAVING POWER HOUSE  19:00",
+            "🚌 MZANSI(BYO) LEAVING POWER HOUSE  14:00",
+            "🚌 MZANSI(BYO) LEAVING POWER HOUSE  17:00",
+            "🚌 DELTA(BYO) LEAVING POWER HOUSE  15:00",
+            "🚌 DELTA(BYO) LEAVING POWER HOUSE  16:00",
+            "🚌 SWISS(BYO) LEAVING POWER HOUSE  15:00",
+            "🚌 SWISS(BYO) LEAVING POWER HOUSE  16:00",
+            "🚌 SWISS(BYO) LEAVING POWER HOUSE  17:00",
+            "🚌 IMPERIAL(BYO) LEAVING POWER HOUSE  17:00",
+            "🚌 IMPERIAL(BYO) LEAVING POWER HOUSE  18:00",
+            "🚌 BROOKLYN(BYO) LEAVING POWER HOUSE  17:00",
+            "🚌 REGIONAL(BYO) LEAVING POWER HOUSE  17:00",
+            "🚌 MTHETHI(BYO) LEAVING POWER HOUSE  18:00",
         ];
 
         const textElement = document.getElementById('digitalText');
