--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -227,7 +227,7 @@
 
     <script>
         const messages = [
-            "🚌 POWER HOUSE - EKUSENI          🚌REVIVAL(POWER HOUSE to BYO) LEAVING 08:00.          🚌BRAVO(BYO) LEAVING 11:00.         🚌 REVIVAL(BYO) LEAVING 12:00",
+            "EKUSENI...............🚌REVIVAL(POWER HOUSE to BYO) LEAVING 08:00...............🚌BRAVO(BYO) LEAVING 11:00...............🚌 REVIVAL(BYO) LEAVING 12:00",
             "🚌 SWISS(BYO) LEAVING POWER HOUSE  19:00",
             "🚌 MZANSI(BYO) LEAVING POWER HOUSE  14:00",
             "🚌 MZANSI(BYO) LEAVING POWER HOUSE  17:00",
