Added powerhouse destinations

--- a/TheFactory/wwwroot/index.html
+++ b/TheFactory/wwwroot/index.html
@@ -258,7 +258,7 @@
         setInterval(updateMessage, 10000); // every 10 seconds
 
         const cities = [
-    "Antananarivo", "Beira", "Blantyre", "Bloemfontein", "Bulawayo", "Cape Town", "Durban", "East London", "Francistown", "Gaborone", "Harare", "Johannesburg", "Lilongwe", "Livingstone", "Lusaka", "Manzini", "Maputo", "Maseru", "Mbabane", "Mutare", "Polokwane", "Port Elizabeth", "Pretoria", "Walvis Bay", "Windhoek"
+    "Bulawayo", "Chegutu", "Kwekwe", "Zvishavane", "Masvingo", "Durban", "East London", "Francistown", "Gaborone", "Harare", "Johannesburg", "Lilongwe", "Livingstone", "Lusaka", "Manzini", "Maputo", "Maseru", "Mbabane", "Mutare", "Polokwane", "Port Elizabeth", "Pretoria", "Walvis Bay", "Windhoek"
 ];
 
 function setupAutocomplete(inputId, suggestionsId) {
